--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "env": { "PYTHONPATH": "${workspaceFolder}" } ,
-            "pythonPath": "${config:python.pythonPath}"
+            "python": "${command:python.interpreterPath}"
         }
     ]
 }
